// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package hotlap.v1alpha;

service DriverService {
    rpc Read(DriverRequest) returns (DriverResponse) {}
}

message DriverRequest {
    oneof params {
        string id = 1;
        string name = 2;
    }
}

message DriverResponse {
    repeated Driver drivers = 1;
}

message Driver {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string nationality = 4;
}
